--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,5 +1,5 @@
 #register {
-  background-image: url('./public/register.jpg');
+  background-image: url('/register.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
