--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,5 +1,5 @@
 #login {
-  background-image: url('./public/loginaccess.jpg');
+  background-image: url('/loginaccess.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
