--- a/src/Pages/AddGame/AddGame.css
+++ b/src/Pages/AddGame/AddGame.css
@@ -27,7 +27,7 @@
   font-size: 1rem;
   margin-bottom: 5px;
   display: inline-block;
-  background-color: transparent; /* Remueve fondo negro */
+  background-color: transparent; 
 }
 
 .add-game-section input[type="text"],
