--- a/src/styles/FormStyles.css
+++ b/src/styles/FormStyles.css
@@ -1,6 +1,10 @@
-/* Contenedor del formulario */
+
 form.user-form,
 form.event-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
   background-color: var(--color-dark-1);
   border-radius: var(--border-radius-l);
   padding: var(--spacing-m);
@@ -8,7 +12,9 @@ form.event-form {
   max-width: 400px;
   margin: 0 auto;
   height: auto;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); 
 }
+
 
 form.user-form h2,
 form.event-form h2 {
@@ -18,17 +24,18 @@ form.event-form h2 {
   font-size: 1.5rem;
 }
 
-/* Contenedor del input */
+
 .input-container {
   position: relative;
   margin-bottom: var(--spacing-m);
+  width: 100%; 
 }
 
-/* Input */
+
 .input-container input,
 .input-container .input {
   width: 100%;
-  padding: 15px 15px;
+  padding: 15px;
   font-size: 1rem;
   border: 1.5px solid var(--color-light-2);
   border-radius: var(--border-radius-s);
@@ -36,25 +43,14 @@ form.event-form h2 {
   color: var(--color-light-1);
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
   outline: none;
+  box-sizing: border-box;
 }
 
-/* Input específico para fecha */
-.input-container input[type="date"] {
-  appearance: none;
-}
 
-.input-container input[type="date"]::-webkit-calendar-picker-indicator {
-  background-color: var(--color-accent-1);
-  border-radius: 50%;
-  padding: 5px;
-  cursor: pointer;
-}
-
-/* Label del input */
 .input-container label,
 .input-container .iLabel {
   position: absolute;
-  top: -10px;
+  top: -10px; 
   left: 15px;
   background-color: var(--color-dark-1);
   padding: 0 5px;
@@ -64,19 +60,20 @@ form.event-form h2 {
   transition: color 0.3s ease;
 }
 
-/* Cambios en el input cuando está enfocado */
+
 .input-container input:focus,
 .input-container .input:focus {
   border-color: var(--color-accent-1);
   box-shadow: 0 0 5px var(--color-accent-1);
 }
 
+
 .input-container input:focus ~ label,
 .input-container .input:focus ~ .iLabel {
   color: var(--color-accent-1);
 }
 
-/* Botón del formulario */
+
 button.submit {
   display: block;
   width: 100%;
